Checking for restarting the level is better now.

--- a/blockie.css
+++ b/blockie.css
@@ -38,6 +38,21 @@ body {
     border: 5px solid hsl(0, 100%, 100%);
 }
 
+#messageDisplayer {
+    width: 480px;
+    height: 100px;
+    position: absolute;
+    left: 50%;
+    margin-left: -240px;
+    top: 50%;
+    margin-top: -50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    font-size: x-large;
+}
+
 #gameInfo {
     height: 50px;
     display: flex;
