Warning triangles (for moving lasers) work perfectly in both directions.

--- a/blockie.css
+++ b/blockie.css
@@ -35,7 +35,7 @@ body {
 }
 
 #game {
-    border: 5px solid hsl(0, 100%, 100%);
+    outline: 5px solid hsl(0, 100%, 100%);
 }
 
 #messageDisplayer {
