--- a/blockie.css
+++ b/blockie.css
@@ -14,6 +14,7 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    text-align: center;
     font-family: symtext;
     color: hsl(0, 100%, 100%);
     /*Disables selecting (highlighting) the text.*/
