Using the mouse to select levels from the menu is mostly functional.

--- a/blockie.css
+++ b/blockie.css
@@ -67,238 +67,86 @@ body {
     margin-top: 6px;
 }
 
-#levelOneMenuIcon {
+.menuIcon {
     width: 96px;
     height: 96px;
     position: absolute;
-    float: left;
-    margin-left: 16px;
-    margin-top: 16px;
-    text-align: center;
     font-size: xx-large;
     color: white;
     outline: 5px solid white;
     visibility: hidden;
+    z-index: 100;
 }
 
-#levelOneMenuIconText {
+.menuIconText {
     margin-top: 20px;
+}
+
+#levelOneMenuIcon {
+    margin-left: 16px;
+    margin-top: 16px;
 }
 
 #levelTwoMenuIcon {
-    width: 96px;
-    height: 96px;
-    position: absolute;
-    float: left;
     margin-left: 144px;
     margin-top: 16px;
-    text-align: center;
-    font-size: xx-large;
-    color: white;
-    outline: 5px solid white;
-    visibility: hidden;
-}
-
-#levelTwoMenuIconText {
-    margin-top: 20px;
 }
 
 #levelThreeMenuIcon {
-    width: 96px;
-    height: 96px;
-    position: absolute;
-    float: left;
     margin-left: 272px;
     margin-top: 16px;
-    text-align: center;
-    font-size: xx-large;
-    color: white;
-    outline: 5px solid white;
-    visibility: hidden;
-}
-
-#levelThreeMenuIconText {
-    margin-top: 20px;
 }
 
 #levelFourMenuIcon {
-    width: 96px;
-    height: 96px;
-    position: absolute;
-    float: left;
     margin-left: 400px;
     margin-top: 16px;
-    text-align: center;
-    font-size: xx-large;
-    color: white;
-    outline: 5px solid white;
-    visibility: hidden;
-}
-
-#levelFourMenuIconText {
-    margin-top: 20px;
 }
 
 #levelFiveMenuIcon {
-    width: 96px;
-    height: 96px;
-    position: absolute;
-    float: left;
     margin-left: 16px;
     margin-top: 144px;
-    text-align: center;
-    font-size: xx-large;
-    color: white;
-    outline: 5px solid white;
-    visibility: hidden;
-}
-
-#levelFiveMenuIconText {
-    margin-top: 20px;
 }
 
 #levelSixMenuIcon {
-    width: 96px;
-    height: 96px;
-    position: absolute;
-    float: left;
     margin-left: 144px;
     margin-top: 144px;
-    text-align: center;
-    font-size: xx-large;
-    color: white;
-    outline: 5px solid white;
-    visibility: hidden;
-}
-
-#levelSixMenuIconText {
-    margin-top: 20px;
 }
 
 #levelSevenMenuIcon {
-    width: 96px;
-    height: 96px;
-    position: absolute;
-    float: left;
     margin-left: 272px;
     margin-top: 144px;
-    text-align: center;
-    font-size: xx-large;
-    color: white;
-    outline: 5px solid white;
-    visibility: hidden;
-}
-
-#levelSevenMenuIconText {
-    margin-top: 20px;
 }
 
 #levelEightMenuIcon {
-    width: 96px;
-    height: 96px;
-    position: absolute;
-    float: left;
     margin-left: 400px;
     margin-top: 144px;
-    text-align: center;
-    font-size: xx-large;
-    color: white;
-    outline: 5px solid white;
-    visibility: hidden;
-}
-
-#levelEightMenuIconText {
-    margin-top: 20px;
 }
 
 #levelNineMenuIcon {
-    width: 96px;
-    height: 96px;
-    position: absolute;
-    float: left;
     margin-left: 16px;
     margin-top: 272px;
-    text-align: center;
-    font-size: xx-large;
-    color: white;
-    outline: 5px solid white;
-    visibility: hidden;
-}
-
-#levelNineMenuIconText {
-    margin-top: 20px;
 }
 
 #levelTenMenuIcon {
-    width: 96px;
-    height: 96px;
-    position: absolute;
-    float: left;
     margin-left: 144px;
     margin-top: 272px;
-    text-align: center;
-    font-size: xx-large;
-    color: white;
-    outline: 5px solid white;
-    visibility: hidden;
-}
-
-#levelTenMenuIconText {
-    margin-top: 20px;
 }
 
 #levelElevenMenuIcon {
-    width: 96px;
-    height: 96px;
-    position: absolute;
-    float: left;
     margin-left: 272px;
     margin-top: 272px;
-    text-align: center;
-    font-size: xx-large;
-    color: white;
-    outline: 5px solid white;
-    visibility: hidden;
-}
-
-#levelElevenMenuIconText {
-    margin-top: 20px;
 }
 
 #levelTwelveMenuIcon {
-    width: 96px;
-    height: 96px;
-    position: absolute;
-    float: left;
     margin-left: 400px;
     margin-top: 272px;
-    text-align: center;
-    font-size: xx-large;
-    color: white;
-    outline: 5px solid white;
-    visibility: hidden;
-}
-
-#levelTwelveMenuIconText {
-    margin-top: 20px;
 }
 
 #levelEndMenuIcon {
     width: 480px;
     height: 96px;
-    position: absolute;
-    float: left;
     margin-left: 16px;
     margin-top: 400px;
-    text-align: center;
-    font-size: xx-large;
-    color: white;
-    outline: 5px solid white;
-    visibility: hidden;
-}
-
-#levelEndMenuIconText {
-    margin-top: 20px;
 }
 
 #messageDisplayer {
